# BukkitDevelopREPL

./: .BukkitDevelopREPL.yaml  .gitignore  .spigot-debugger-launcher.yaml  BukkitDevelopREPL.cabal  ClientJsonScript.hs  README.md  clientJsonScript.hs  spigot-debugger-launcher.cabal  stack.yaml
app/: Main.hs
src/: AppOptions.hs  AppState.hs  ClientLauncher.hs  Constant.hs  CrossPlatform.hs  FileIO.hs  Imports.hs  MinecraftClient.hs  PluginInstaller.hs  ProcessIO.hs  SpigotBuilder.hs  SpigotServer.hs  SpigotServerSetup.hs  Util.hs
src/CLIOptions/: CLIOptions.hs  Parser.hs
src/Config/: Config.hs  Loader.hs  Resource.hs
src/Data/: MCProperty.hs
src/Data/Minecraft/: MCGameMode.hs  MCProperty.hs  MCServerBrand.hs  MCVersion.hs
src/Minecraft/: MinecraftPropertyAnalyser.hs  MinecraftVersion.hs  Resource.hs
src/Minecraft/Client/: ClientJsonAnalyser.hs  MinecraftClient.hs
src/Minecraft/Server/: MinecraftServer.hs  MinecraftServerSetup.hs  PluginInstaller.hs  ServerBrand.hs
src/Minecraft/Server/Paper/: PaperSetup.hs
src/Minecraft/Server/Paper/Setup/: PaperSetup.hs
src/Minecraft/Server/Spigot/: SpigotServer.hs  SpigotSetup.hs
src/Minecraft/Server/Spigot/Builder/: Resource.hs  SpigotBuilder.hs
src/Network/: Url.hs
src/Repl/: Repl.hs  ReplCommand.hs  Util.hs
src/Repl/Command/: ExitCommand.hs  HelpCommand.hs  InstallPluginsCommand.hs  ListClientCommand.hs  NewClientCommand.hs  OpenPluginsDirCommand.hs  ReloadConfigCommand.hs  ReplCommand.hs  RestartServerCommand.hs  ShowConfigCommand.hs  StartServerCommand.hs  TerminateClientCommand.hs  TerminateServerCommand.hs
src/Spigot/Builder/: Resource.hs  SpigotBuilder.hs
src/Spigot/Server/: SpigotServer.hs
