cabal-version: 2.2

name:           BukkitDevelopREPL
version:        1.0.0.2
description:    Please see the README on GitHub at <https://github.com/t-sasaki915/BukkitDevelopREPL#readme>
homepage:       https://github.com/t-sasaki915/BukkitDevelopREPL#readme
bug-reports:    https://github.com/t-sasaki915/BukkitDevelopREPL/issues
author:         TSasaki
maintainer:     netst915@gmail.com
copyright:      2024 TSasaki
license:        MIT
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    README.md
    .BukkitDevelopREPL.yaml

source-repository head
  type: git
  location: https://github.com/t-sasaki915/BukkitDevelopREPL

library
  exposed-modules:
      CLIOptions.CLIOptions
      CLIOptions.Parser
      Config.Config
      Config.Loader
      Config.Resource
      Data.Minecraft.MCGameMode
      Data.Minecraft.MCProperty
      Data.Minecraft.MCServerBrand
      Data.Minecraft.MCVersion
      Minecraft.Client.ClientJsonAnalyser
      Minecraft.Client.MinecraftClient
      Minecraft.Server.Paper.PaperSetup
      Minecraft.Server.Spigot.SpigotSetup
      Minecraft.Server.MinecraftServer
      Minecraft.Server.MinecraftServerSetup
      Minecraft.Server.PluginInstaller
      Network.Url
      Repl.Command.ExitCommand
      Repl.Command.HelpCommand
      Repl.Command.InstallPluginsCommand
      Repl.Command.ListClientCommand
      Repl.Command.NewClientCommand
      Repl.Command.RestartServerCommand
      Repl.Command.ShowConfigCommand
      Repl.Command.StartServerCommand
      Repl.Command.TerminateClientCommand
      Repl.Command.TerminateServerCommand
      Repl.Repl
      Repl.ReplCommand
      AppState
      CrossPlatform
      Imports
      ProcessIO
  other-modules:
      Paths_BukkitDevelopREPL
  autogen-modules:
      Paths_BukkitDevelopREPL
  hs-source-dirs:
      src
  ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints
  build-depends:
      base >=4.7 && <5
    , directory ==1.3.8.4
    , filepath ==1.4.300.1
    , process ==1.6.19.0
    , transformers ==0.6.1.0
    , optparse-applicative ==0.18.1.0
    , regex-posix ==0.96.0.1
    , bytestring ==0.11.5.3
    , file-embed ==0.0.16.0
    , yaml ==0.11.11.2
    , text ==2.0.2
    , aeson ==2.1.2.1
    , lens ==5.2.3
    , extra ==1.7.14
  default-language: Haskell2010
  default-extensions: LambdaCase, OverloadedStrings, RankNTypes

executable BukkitDevelopREPL-exe
  main-is: Main.hs
  other-modules:
      Paths_BukkitDevelopREPL
  autogen-modules:
      Paths_BukkitDevelopREPL
  hs-source-dirs:
      app
  ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , BukkitDevelopREPL
  default-language: Haskell2010
  default-extensions: LambdaCase
