cabal-version: 2.2

name:           spigot-debugger-launcher
version:        1.0.0.2
description:    Please see the README on GitHub at <https://github.com/t-sasaki915/spigot-debugger-launcher#readme>
homepage:       https://github.com/t-sasaki915/spigot-debugger-launcher#readme
bug-reports:    https://github.com/t-sasaki915/spigot-debugger-launcher/issues
author:         TSasaki
maintainer:     netst915@gmail.com
copyright:      2024 TSasaki
license:        MIT
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    README.md

source-repository head
  type: git
  location: https://github.com/githubuser/spigot-debugger-launcher

library
  exposed-modules:
      CLIOptions.CLIOptions
      CLIOptions.Parser
      Config.Config
      Config.Loader
      Config.Resource
      Minecraft.MinecraftVersion
      Minecraft.Resource
      Spigot.Builder.Resource
      Spigot.Builder.SpigotBuilder
      AppState
      FileIO
      ProcessIO
  other-modules:
      Paths_spigot_debugger_launcher
  autogen-modules:
      Paths_spigot_debugger_launcher
  hs-source-dirs:
      src
  ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints
  build-depends:
      base >=4.7 && <5
    , directory ==1.3.8.4
    , filepath ==1.4.300.1
    , process ==1.6.19.0
    , transformers ==0.6.1.0
    , optparse-applicative ==0.18.1.0
    , regex-posix ==0.96.0.1
    , bytestring ==0.11.5.3
    , file-embed ==0.0.16.0
    , yaml ==0.11.11.2
    , text ==2.0.2
  default-language: Haskell2010
  default-extensions: LambdaCase

executable spigot-debugger-launcher-exe
  main-is: Main.hs
  other-modules:
      Paths_spigot_debugger_launcher
  autogen-modules:
      Paths_spigot_debugger_launcher
  hs-source-dirs:
      app
  ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , spigot-debugger-launcher
    , transformers ==0.6.1.0
  default-language: Haskell2010
  default-extensions: LambdaCase
